--- a/.github/workflows/apiserver-staging-autodeploy.yml
+++ b/.github/workflows/apiserver-staging-autodeploy.yml
@@ -1,4 +1,4 @@
-name: Auto deployment for oams-apiserver-staging
+name: Deployment for oams-apiserver-staging
 
 # When this action will be executed
 on:
