--- a/.github/workflows/apiserver-staging-autodeploy.yml
+++ b/.github/workflows/apiserver-staging-autodeploy.yml
@@ -5,7 +5,7 @@ on:
   # Automatically trigger it when detected changes in repo
   push:
     branches: 
-      [ azure ]
+      [ main ]
     paths:
     - 'backend/**'
     - '.github/workflows/apiserver-staging-autodeploy.yml'
