--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -1,44 +1,19 @@
-# This workflow executes all tests in OAMS.
-
-name: Test
+name: Backend
 
 on:
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'backend/**'
+      - '.github/workflows/backend-test.yml'
 
 jobs:
-  frontend:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.17.1'
-          cache: 'npm'
-          cache-dependency-path: 'frontend/package-lock.json'
-
-      - name: Build frontend
-        env:
-          AZURE_LOGIN_SCOPE: ${{ vars.AZURE_LOGIN_SCOPE }}
-          SUPABASE_URL: ${{ vars.SUPABASE_URL }}
-          SUPABASE_KEY: ${{ vars.SUPABASE_KEY }}
-          API_SERVER: ${{ vars.API_SERVER }}
-          WEB_SERVER: ${{ vars.WEB_SERVER }}
-        run: |
-          cd frontend
-          npx next telemetry disable
-          npm install
-          npm run build
-
-  backend:
+  test:
     runs-on: ubuntu-latest
 
     services:
       postgres:
-        image: postgres:15.2-bullseye
+        image: postgres:16
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
