--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "update": "npx npm-check-updates -u"
   },
   "dependencies": {
+    "@mantine/code-highlight": "^7.3.2",
     "@mantine/core": "^7.3.2",
     "@mantine/dropzone": "^7.3.2",
     "@mantine/form": "^7.3.2",
